<resources>
    <string name="app_name">FitnessAppForMyself</string>
    <string name="profile_string">Add Profile</string>
    <string name="settings">SETTINGS</string>
    <string name="surname">Surname:</string>
    <string name="add">ADD</string>
    <string name="age">Age:</string>
    <string name="name">Name:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="save">SAVE INFO</string>
    <string name="just_save">SAVE</string>
    <string name="profiles">MY PROFILE</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="next_page">NEXT</string>
    <string name="gender">Gender:</string>
    <string name="male_female">m/f</string>
    <string name="HowOften">How Often Do You Workout?</string>
    <string name="often1">very little or none</string>
    <string name="often2">1–3 days per week</string>
    <string name="often3">3–5 days per week</string>
    <string name="often4">6–7 days per week</string>
    <string name="often5">physical job + hard workout</string>
    <string name="avatar1">PICK YOUR AVATAR TO CONTINUE</string>
    <string name="home">Home</string>
    <string name="bmr">BMR:</string>
    <string name="burnedCals">Calories Burned:</string>
    <string name="activityLevel">Activity Level:</string>
    <string name="calories">kcals</string>
    <string name="waist">Waist Circumference:</string>
    <string name="gender_m_f">male/female</string>
    <string name="empty" />
    <string name="reset_timer">resets the timer</string>
    <string name="enter_a_name">name</string>
    <string name="enter_an_age">age</string>
    <string name="enter_a_weight">weight</string>
    <string name="enter_a_height">height</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="calc_body_fat">Calculate Body Fat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="neck">Neck: Circumference</string>
    <string name="save_bodyfat">Save Bodyfat</string>
    <string name="body_fat_percentage">Body Fat:</string>
    <string name="hip_circumference">Hip Circumference:</string>
    <string name="deleteProfOne">DELETE PROFILE</string>
    <string name="deleteProfTwo">DELETE SECOND PROFILE</string>
    <string name="deleteProf3">DELETE THIRD PROFILE</string>
    <string name="createWorkout">CREATE YOUR WORKOUT SET</string>
    <string name="read_me">READ ME</string>
    <string name="about_app">About the App:</string>
    <string name="creator_name">Creator:</string>
    <string name="creator_name_aka">csinop</string>
    <string name="attention">DISCLAIMER:</string>
    <string name="about_calories">Calorie calculations give you an approximation, those values are not 100% accurate. Using them without consideration can affect your health in a negative way.</string>
    <string name="bodyFat_attention">Body fat calculations give you an approximation with an error margin of 3–5%, thus do not take those numbers at face value, doing so could affect your health in a negative way.</string>
    <string name="suggestions">SUGGESTIONS</string>
    <string name="goal_title">What is your goal ?</string>
    <string name="goal_option_one">I want to lose weight</string>
    <string name="goal_option_two">I WANT TO MAINTAIN MY WEIGHT</string>
    <string name="goal_option_three">I WANT TO GAIN WEIGHT</string>
    <string name="cancel">Cancel</string>
    <string name="percentage">%</string>
    <string name="navigation">NAVIGATION</string>
    <string name="app_menu">APP</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="current_profile_avatar">CURRENT PROFILE: </string>
    <string name="user">USER: </string>
    <string name="view_workouts">VIEW WORKOUTS: </string>
    <string name="create_weekly_plan">CREATE YOUR WEEKLY PLAN </string>
    <string name="edit_calender">PLAN YOUR WEEK</string>
    <string name="empty_nine_fold">no workout</string>
    <string name="return_home">HOME</string>
    <string name="save_return_home">SAVE AND RETURN HOME</string>
    <string name="delete_plan">DELETE PLAN</string>
    <string name="reset_selection">RESET SELECTION</string>
    <string name="workout_of_today">TODAY\'S WORKOUT</string>
    <string name="view_in_detail">VIEW IN DETAIL</string>
    <string name="card_view_title">SET REP AND SET COUNT</string>
    <string name="set">SET(s):</string>
    <string name="set_count">SET COUNT:</string>
    <string name="rep">REP(s):</string>
    <string name="rep_count">REP COUNT:</string>
    <string name="countdown_text">02:00</string>
    <string name="start_timer">START</string>
    <string name="pause_timer">PAUSE</string>
    <!--WEEK DAYS-->
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="cd_delete_prof">Deletes Profile</string>
    <string name="cd_show_pic">Displays Profile Picture</string>
    <string name="off_day">Today is your off day.</string>
    <!--WORKOUT TYPES -->
    <string name="chest">CHEST</string>
    <string name="back">BACK</string>
    <string name="legs">LEGS</string>
    <string name="biceps">BICEPS</string>
    <string name="triceps">TRICEPS</string>
    <string name="shoulders">SHOULDERS</string>
    <!--CHEST-->
    <string name="BENCH_PRESS_NORMAL">BENCH PRESS</string>
    <string name="BENCH_PRESS_INCLINE">INCLINE BENCH PRESS</string>
    <string name="DUMBBEL_CHEST_PRESS_NORMAL">DUMBBEL CHEST PRESS</string>
    <string name="DUMBBEL_CHEST_PRESS_INCLINE">INCLINE DUMBBEL CHEST PRESS</string>
    <string name="DUMBBEL_FLY_NORMAL">DUMBBEL FLY</string>
    <string name="DUMBBEL_FLY_INCLINE">INCLINE DUMBBEL FLY</string>
    <string name="CABLE_CROSS_OVER">CABLE CROSS OVER</string>
    <string name="DIP">DIPS</string>
    <string name="PUSH_UP">PUSH UPS</string>
    <!--BICEPS-->
    <string name="BARBELL_CURL">BARBELL CURLS</string>
    <string name="DUMBBEL_CURL">DUMBBEL CURLS</string>
    <string name="CABLE_CURL">CABLE CURlS</string>
    <string name="HAMMER_CURLS">HAMMER CURLS</string>
    <string name="PREACHER_CURL">PREACHER CURLS</string>
    <string name="CONCENTRATION_CURL">CONCENTRATION CURLS</string>
    <!--TRICEPS-->
    <string name="CABLE_TRICEPS_PUSH_DOWN_ANY">CABLE TRICEPS PUSH DOWN</string>
    <string name="TRICEPS_EXTENSION_ANY">TRICEPS EXTENSION</string>
    <string name="TRICEPS_DIPS">TRICEPS DIPS</string>
    <string name="SKULL_CRUSHER">SKULL CRUSHER</string>
    <string name="BENCH_DIPS">BENCH DIPS</string>
    <!--BACK-->
    <string name="LAT_PULL_DOWN">LAT PULL DOWN</string>
    <string name="DEADLIFT_NORMAL">DEADLIFT</string>
    <string name="PULL_UP">PULL UPS</string>
    <string name="DEADLIFT_SUMO">DEADLIFT SUMO</string>
    <string name="INCLINE_DUMBBEL_ROW">INCLINE DUMBBEL ROW</string>
    <string name="CHIN_UP">CHIN UPS</string>
    <string name="SEATED_CABLE_ROW">SEATED CABLE ROW</string>
    <!--LEGS-->
    <string name="SQUAT">SQUAT</string>
    <string name="LUNGES">LUNGES</string>
    <string name="LEG_PRESS">LEG PRESS</string>
    <string name="HAMSTRING_CURL">HAMSTRING CURLS</string>
    <!--SHOULDERS-->
    <string name="LATERAL_RAISES">LATERAL RAISES</string>
    <string name="SEATED_MILITARY_PRESS">SEATED MILITARY PRESS</string>
    <string name="DUMBBEL_FRONT_RAISE">FRONT RAISE</string>
    <string name="FACE_PULLS">FACE PULLS</string>
    <string name="SEATED_DUMBBEL_SHOULDER_PRESS">SEATED DUMBBEL SHOULDER PRESS</string>
    <!--CARDIO-->
    <string name="CARDIO">CARDIO</string>
    <string name="treadmill">TREADMILL</string>
    <string name="cycling">CYCLING</string>
    <string name="elliptical">ELLIPTICAL</string>
    <string name="skipping_rope">SKIPPING ROPE</string>
    <string name="HIIT">HIIT</string>
    <!--OFF-->
    <string name="OFF">OFF</string>
    <!--VERY LONG STRINGS-->
    <string name="toLoseWeightThree">If you combine those two ways, you can lose weight much more quickly. Avoid eating calorie dense foods and try to eat foods with more protein.
        Foods with high protein content will keep you full longer, thus reducing your desire for snacks</string>
    <!--DISCLAIMER-->
    <string name="DISCLAIMER_ONE">The information provided by my mobile application is for general information purposes only. My mobile application does not contain any medical or professional advice.
    I make no representation of warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability or completeness of any information on my mobile application.
    Under no circumstances shall I have any liability to you for any loss or damage of any kind incurred as a result of the use of my mobile application or reliance on any information provided on my mobile application.
    Your use of my mobile application and your reliance on any information on my mobile application is solely at your own risk.</string>
    <string name="DISCLAIMER_TWO">This mobile application does not contain fitness advice. The fitness information is provided for informational and educational purposes only and is not a
    substitute for professional advice. I do not provide any kind of fitness advice. The use and reliance of any information contained in my mobile application is solely at your own risk.</string>
    <string name="DISCLAIMER_UPDATE">Last updated October 04, 2021</string>
    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="MainMenuUserHint">You can click the weekday words to see and change that day\'s workout plan.</string>
</resources>