<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadMe">

    <TextView
        android:id="@+id/aboutTheApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/about_app"
        android:textColor="#020101"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/creator_name"
        android:textColor="#040101"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTheApp" />

    <TextView
        android:id="@+id/creator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="72dp"
        android:text="@string/creator_name_aka"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/creator"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/attention"
        android:textColor="#070303"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creator" />

    <TextView
        android:id="@+id/aboutCalories"
        android:layout_width="328dp"
        android:layout_height="89dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_calories"
        android:textColor="#032B3C"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attention" />

    <TextView
        android:id="@+id/bodyFat_attention"
        android:layout_width="326dp"
        android:layout_height="96dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/bodyFat_attention"
        android:textColor="#044750"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutCalories" />
</androidx.constraintlayout.widget.ConstraintLayout>