<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/someBodyPartLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/someBodyPartBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/bodyPartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chest"
            android:textColor="?colorOnPrimary"
            android:textSize="40sp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/workoutCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/someBodyPartBar"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_corners_white_violet_stroke">

            <TextView
                android:id="@+id/workoutCardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_view_title"
                android:textColor="?colorPrimary"
                android:textSize="18sp"
                android:padding="2dp" />

            <TextView
                android:id="@+id/workoutCardSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/workoutCardTitle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/set"
                android:textColor="?colorPrimary"
                android:textSize="16sp"
                android:padding="3dp"
                android:background="@drawable/curved_corners_white_violet_stroke"/>

            <EditText
                android:id="@+id/workoutCardSetInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/workoutCardTitle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/workoutCardSet"
                android:background="@drawable/curved_corners_white_violet_stroke"
                android:hint="@string/set_count"
                android:padding="3dp"
                android:textColor="?colorPrimary"
                android:textSize="16sp"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/workoutRep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rep"
                android:textColor="?colorPrimary"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:padding="3dp"
                android:background="@drawable/curved_corners_white_violet_stroke"
                android:layout_below="@+id/workoutCardSet"/>

            <EditText
                android:id="@+id/workoutCardRepInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/workoutCardSet"
                android:layout_toEndOf="@id/workoutRep"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/rep_count"
                android:textColor="?colorPrimary"
                android:textSize="16sp"
                android:padding="3dp"
                android:background="@drawable/curved_corners_white_violet_stroke"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/workoutCardSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/curved_corners_white_violet_stroke"
                android:textColor="@color/custom_green"
                android:text="@string/add"
                android:textSize="16sp"
                android:layout_below="@+id/workoutRep"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"/>

            <Button
                android:id="@+id/workoutCardCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/curved_corners_white_violet_stroke"
                android:textColor="@color/custom_green"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:layout_below="@+id/workoutRep"
                android:layout_toEndOf="@id/workoutCardSave"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/checkBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/someBodyPartBar"
        app:layout_constraintStart_toStartOf="parent">
    </LinearLayout>

    <Button
        android:id="@+id/save_and_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save"
        android:drawableEnd="@drawable/ic_baseline_save_24"
        android:padding="2dp"
        android:text="@string/save"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBoxLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>